# Minecraft-Console-Client

./: CMakeLists.txt  README.md  client.cpp  client.h  handshake.cpp  handshake.h  main.cpp  read_write_varint_varlong.cpp  read_write_varint_varlong.h
